# chat-app

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
src/: components.rs  main.rs  style.css
tauri-test/src-tauri/: Cargo.toml  tauri.conf.json
